--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     </style>
   </head>
   <body>
-    <img src="myticket.png" alt="Movie Ticket" />
+    <img src="Picsart_25-08-01_12-54-06-773.jpg" alt="Movie Ticket" />
   </body>
 </html>
