--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Movie Ticket</title>
-    <style>
-      body {
-        margin: 0;
-        background: #000;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-      }
-      img {
-        max-width: 100%;
-        max-height: 100vh;
-      }
-    </style>
-  </head>
-  <body>
-    <img src="Picsart_25-08-01_12-54-06-773.jpg" alt="Movie Ticket" />
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Movie Ticket</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #000;
+      height: 100vh;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .ticket {
+      transform: translateY(-100%);
+      opacity: 0;
+      transition: transform 1s ease, opacity 1s ease;
+      max-width: 100%;
+      max-height: 100vh;
+    }
+
+    .ticket.show {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  </style>
+</head>
+<body>
+  <img src="myticket.png" alt="Movie Ticket" class="ticket" id="ticket" />
+  
+  <script>
+    window.addEventListener('load', () => {
+      const ticket = document.getElementById('ticket');
+      ticket.classList.add('show');
+    });
+  </script>
+</body>
 </html>
