--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </style>
 </head>
 <body>
-  <img src="kingdom.jpg" alt="Movie Ticket" class="ticket" id="ticket" />
+  <img src="war2.jpg" alt="Movie Ticket" class="ticket" id="ticket" />
   
   <script>
     window.addEventListener('load', () => {
